PMM-11837 UpdateChecks API
