# gen/check/retrieval/retrieval_api.pb.gw.go
@@ -133,6 +133,40 @@ func local_request_RetrievalAPI_GetAllAlertRuleTemplates_0(ctx context.Context, 
 
 }
 
+func request_RetrievalAPI_UpdateAdvisorsStatus_0(ctx context.Context, marshaler runtime.Marshaler, client RetrievalAPIClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq UpdateAdvisorsStatusRequest
+	var metadata runtime.ServerMetadata
+
+	newReader, berr := utilities.IOReaderFactory(req.Body)
+	if berr != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", berr)
+	}
+	if err := marshaler.NewDecoder(newReader()).Decode(&protoReq); err != nil && err != io.EOF {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+
+	msg, err := client.UpdateAdvisorsStatus(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
+	return msg, metadata, err
+
+}
+
+func local_request_RetrievalAPI_UpdateAdvisorsStatus_0(ctx context.Context, marshaler runtime.Marshaler, server RetrievalAPIServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq UpdateAdvisorsStatusRequest
+	var metadata runtime.ServerMetadata
+
+	newReader, berr := utilities.IOReaderFactory(req.Body)
+	if berr != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", berr)
+	}
+	if err := marshaler.NewDecoder(newReader()).Decode(&protoReq); err != nil && err != io.EOF {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+
+	msg, err := server.UpdateAdvisorsStatus(ctx, &protoReq)
+	return msg, metadata, err
+
+}
+
 // RegisterRetrievalAPIHandlerServer registers the http handlers for service RetrievalAPI to "mux".
 // UnaryRPC     :call RetrievalAPIServer directly.
 // StreamingRPC :currently unsupported pending https://github.com/grpc/grpc-go/issues/906.
@@ -211,6 +245,31 @@ func RegisterRetrievalAPIHandlerServer(ctx context.Context, mux *runtime.ServeMu
 		}
 
 		forward_RetrievalAPI_GetAllAlertRuleTemplates_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+
+	})
+
+	mux.Handle("POST", pattern_RetrievalAPI_UpdateAdvisorsStatus_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		var stream runtime.ServerTransportStream
+		ctx = grpc.NewContextWithServerTransportStream(ctx, &stream)
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		var err error
+		var annotatedContext context.Context
+		annotatedContext, err = runtime.AnnotateIncomingContext(ctx, mux, req, "/percona.platform.check.retrieval.v1.RetrievalAPI/UpdateAdvisorsStatus", runtime.WithHTTPPathPattern("/v1/check/checks"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := local_request_RetrievalAPI_UpdateAdvisorsStatus_0(annotatedContext, inboundMarshaler, server, req, pathParams)
+		md.HeaderMD, md.TrailerMD = metadata.Join(md.HeaderMD, stream.Header()), metadata.Join(md.TrailerMD, stream.Trailer())
+		annotatedContext = runtime.NewServerMetadataContext(annotatedContext, md)
+		if err != nil {
+			runtime.HTTPError(annotatedContext, mux, outboundMarshaler, w, req, err)
+			return
+		}
+
+		forward_RetrievalAPI_UpdateAdvisorsStatus_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
 
 	})
 
@@ -321,6 +380,28 @@ func RegisterRetrievalAPIHandlerClient(ctx context.Context, mux *runtime.ServeMu
 
 	})
 
+	mux.Handle("POST", pattern_RetrievalAPI_UpdateAdvisorsStatus_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		var err error
+		var annotatedContext context.Context
+		annotatedContext, err = runtime.AnnotateContext(ctx, mux, req, "/percona.platform.check.retrieval.v1.RetrievalAPI/UpdateAdvisorsStatus", runtime.WithHTTPPathPattern("/v1/check/checks"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := request_RetrievalAPI_UpdateAdvisorsStatus_0(annotatedContext, inboundMarshaler, client, req, pathParams)
+		annotatedContext = runtime.NewServerMetadataContext(annotatedContext, md)
+		if err != nil {
+			runtime.HTTPError(annotatedContext, mux, outboundMarshaler, w, req, err)
+			return
+		}
+
+		forward_RetrievalAPI_UpdateAdvisorsStatus_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+
+	})
+
 	return nil
 }
 
@@ -330,6 +411,8 @@ var (
 	pattern_RetrievalAPI_GetAllAdvisors_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2}, []string{"v1", "check", "GetAllAdvisors"}, ""))
 
 	pattern_RetrievalAPI_GetAllAlertRuleTemplates_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2}, []string{"v1", "check", "GetAllAlertRuleTemplates"}, ""))
+
+	pattern_RetrievalAPI_UpdateAdvisorsStatus_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2}, []string{"v1", "check", "checks"}, ""))
 )
 
 var (
@@ -338,4 +421,6 @@ var (
 	forward_RetrievalAPI_GetAllAdvisors_0 = runtime.ForwardResponseMessage
 
 	forward_RetrievalAPI_GetAllAlertRuleTemplates_0 = runtime.ForwardResponseMessage
+
+	forward_RetrievalAPI_UpdateAdvisorsStatus_0 = runtime.ForwardResponseMessage
 )
